--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   flutter_launcher_icons: ^0.14.4
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
