--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   sqflite: ^2.4.2
   path: ^1.9.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
